Moved the build number from Version: to Release:
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21541 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/rpms/muntsos-common/specfile.template
+++ b/toolchain/rpms/muntsos-common/specfile.template
@@ -23,7 +23,7 @@
 Summary:	MuntsOS Embedded Linux development common files
 Name:		muntsos-common
 Version:	@@VERSION@@
-Release:	1
+Release:	@@BUILDNUM@@
 BuildArch:	noarch
 Group:		Programming
 License:	BSD-1-Clause
