Cosmetic change to comment.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21590 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/Makefile
+++ b/toolchain/crosstool/Makefile
@@ -52,7 +52,7 @@ default: package.deb
 prepare.done:
 	@echo "GCCVER   => $(GCCVER)"
 	@echo "GCCMAJOR => $(GCCMAJOR)"
-	# Packages necessary for Ubuntu 23.10
+	# Install necessary system packages
 	sudo apt -y install autoconf
 	sudo apt -y install bison
 	sudo apt -y install build-essential
