Changed MAKE_FLAGS to MAKE_ARGS
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21605 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/Makefile
+++ b/bootkernel/kernel/Makefile
@@ -64,7 +64,7 @@ $(KERNEL_WORK)/config.done: $(KERNEL_WORK)/src.done
 oldconfig: $(KERNEL_WORK)/config.done
 
 defconfig: $(KERNEL_WORK)/src.done
-	$(MAKE) $(MAKE_FLAGS) $(KERNEL_DEFCONF)
+	$(MAKE) $(MAKE_ARGS) $(KERNEL_DEFCONF)
 	$(MAKE) $(MAKE_ARGS) oldconfig
 	cp $(KERNEL_SRC)/.config $(KERNEL_CONFIG)
 	touch $(KERNEL_WORK)/config.done
