Remove $(INSTALLDIR)/share/gpr with rm -rf
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21608 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/Makefile
+++ b/toolchain/crosstool/Makefile
@@ -131,7 +131,7 @@ build.done: source.done
 reconstitute:
 	cp -R -P -p $(TOOLCHAIN_DIR) $(INSTALLDIR)
 	chmod -R u+w $(INSTALLDIR)
-	rm -f $(INSTALLDIR)/share/gpr
+	rm -rf $(INSTALLDIR)/share/gpr
 	touch build.done
 
 ################################################################################
