--- a/toolchain/libs/Makefile
+++ b/toolchain/libs/Makefile
@@ -175,11 +175,10 @@ SRCDIRS		= $(NCURSES_SRC) $(LIBUSB_SRC) $(HIDAPI_SRC) $(OPENSSL_SRC) $(ZLIB_SRC)
 DISTFILES	= $(NCURSES_DIST) $(LIBUSB_DIST) $(HIDAPI_DIST) $(OPENSSL_DIST) $(ZLIB_DIST) $(CURL_DIST) $(TIRPC_DIST) $(XMLRPC_C_DIST) $(LIBPCAP_DIST) $(LIBNL_DIST) $(LIBSODIUM_DIST) $(LIBMYSQLCLIENT_DIST) $(GDBM_DIST) $(MQTT_DIST) $(RABBITMQ_DIST) $(ZEROMQ_DIST) $(MODBUS_DIST)
 
 BUILDNUM	?= 1
-OSNAME		?= unknown
 PKGNAME		:= $(INSTALLDIR)-libs
 PKGVER		:= $(GCCVER)-$(shell date +%Y.%j).$(BUILDNUM)
 PKGARCH		:= all
-PKGSUFFIX	:= $(PKGVER)-$(OSNAME)-$(PKGARCH)
+PKGSUFFIX	:= $(PKGVER)-$(PKGARCH)
 PKGDIR		:= $(PKGNAME)-$(PKGSUFFIX)
 PKGFILE		:= $(PKGDIR).deb
 
