--- a/toolchain/libsimpleio/Makefile
+++ b/toolchain/libsimpleio/Makefile
@@ -39,11 +39,10 @@ CC		:= $(CROSS_COMPILE)gcc
 RANLIB		:= $(CROSS_COMPILE)ranlib
 
 BUILDNUM	?= 1
-OSNAME		?= unknown
 PKGNAME		:= $(INSTALLDIR)-libsimpleio
 PKGVER		:= $(GCCVER)-$(shell date +%Y.%j).$(BUILDNUM)
 PKGARCH		:= all
-PKGDIR		:= $(PKGNAME)-$(PKGVER)-$(OSNAME)-$(PKGARCH)
+PKGDIR		:= $(PKGNAME)-$(PKGVER)-$(PKGARCH)
 PKGFILE		:= $(PKGDIR).deb
 
 include $(LIBSIMPLEIO)/ada/include/ada.mk
