Direct dpkg-deb to use .xz compression with -Zxz
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21616 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/Makefile
+++ b/toolchain/crosstool/Makefile
@@ -180,7 +180,7 @@ ifeq ($(BOARDNAME), RaspberryPi3)
 	sed -i 's/@@TOOLCHAIN_VERS@@/$(TOOLCHAIN_VERS)/g' $(PKGDIR)$(TOOLCHAIN_DIR)/share/gpr/RaspberryPiZero2W.cgpr
 endif
 	chmod -R ugo-w					$(PKGDIR)/usr
-	fakeroot dpkg-deb --build			$(PKGDIR)
+	fakeroot dpkg-deb -Zxz --build			$(PKGDIR)
 	chmod -R u+w					$(PKGDIR)/usr
 
 ################################################################################
