Split make dtbs from make dtbs_install
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21621 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/Makefile
+++ b/bootkernel/kernel/Makefile
@@ -81,7 +81,8 @@ menuconfig: $(KERNEL_WORK)/src.done
 # Build device tree blobs and overlays
 
 $(KERNEL_WORK)/dtbs.done: $(KERNEL_WORK)/config.done
-	$(MAKE) $(MAKE_ARGS) dtbs dtbs_install INSTALL_DTBS_PATH=$(KERNEL_WORK)/dtbs
+	$(MAKE) $(MAKE_ARGS) dtbs
+	$(MAKE) $(MAKE_ARGS) dtbs_install INSTALL_DTBS_PATH=$(KERNEL_WORK)/dtbs
 	cd $(KERNEL_WORK)/dtbs && mv overlays ..
 	touch $@
 
