Compile device tree overlays as needed.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21623 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/boot/BeagleBone/overlays/Makefile
+++ b/boot/BeagleBone/overlays/Makefile
@@ -1,6 +1,6 @@
 # Makefile for building Beagle Bone device tree overlays
 
-# Copyright (C)2017-2021, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2017-2023, Philip Munts dba Munts Technologies.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -20,57 +20,37 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-MUNTSOS		?= ../../..
-BOARDNAME	?= BeagleBone
-
 BBOVERLAYSURL	= https://github.com/beagleboard/bb.org-overlays.git
 BBOVERLAYSSRC	= bb.org-overlays
 
-include $(MUNTSOS)/include/$(BOARDNAME).mk
+DTC		?= dtc
 
 default: overlays.done
 
 # Define a pattern rule for compiling device tree overlays
 
 %.dtbo: %.dts
-	$(KERNEL_DTC) -@ -b 0 -I dts -O dtb -o $@ $^
-
-# Compile the device tree compiler
-
-dtc.done:
-	$(MAKE) -C $(MUNTSOS)/bootkernel/kernel dtbs BOARDNAME=$(BOARDNAME)
-	touch $@
-
-# Check out BeagleBone overlays repository
-
-clone.done:
-	git clone $(BBOVERLAYSURL)
-	touch $@
+	$(DTC) -@ -b 0 -I dts -O dtb -o $@ $^
 
 # Compile device tree overlays
 
-overlays.done: dtc.done clone.done
-	for F in *.dts ; do $(MAKE) `basename $$F .dts`.dtbo ; done
-	$(MAKE) -C $(BBOVERLAYSSRC) DTC=$(KERNEL_DTC)
+overlays.done:
+	# Compile BeagleBone overlays
+	if [ ! -d $(BBOVERLAYSSRC) ]; then git clone $(BBOVERLAYSURL) ; fi
+	$(MAKE) -C $(BBOVERLAYSSRC) DTC=$(DTC)
 	cp bb.org-overlays/src/arm/PB-SPI1-ETH-CLICK.dtbo .
 	cp bb.org-overlays/src/arm/PB-SPI0-ETH-CLICK.dtbo .
 	cp bb.org-overlays/src/arm/PB-SPI0-ETH-WIZ-CLICK.dtbo .
 	cp bb.org-overlays/src/arm/PB-SPI1-ETH-WIZ-CLICK.dtbo .
+	# Compile MuntsOS custom overlays
+	for F in *.dts ; do $(MAKE) `basename $$F .dts`.dtbo ; done
 	touch $@
-
-# Release compiled overlays
-
-release: overlays.done
-	cd .. ; md5sum -b overlays/*.dtbo | sort -k 2 >overlays.md5
-	cd .. ; tar czf overlays.tgz overlays.md5 overlays/*.dtbo --owner=root --group=root --mode=ugo-w
 
 # Remove working files
 
 clean:
-	rm -rf clone.done overlays.done *.dtbo $(BBOVERLAYSSRC) ../overlays.md5
+	rm -rf *.dtbo overlays.done $(BBOVERLAYSSRC)
 
 reallyclean: clean
-	rm -f dtc.done
-	-$(MAKE) -C $(MUNTSOS)/bootkernel/kernel reallyclean BOARDNAME=$(BOARDNAME)
 
 distclean: reallyclean
