Disabled CONFIG_INPUT_LEDS (caps lock et al).
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21628 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/RaspberryPi3.config
+++ b/bootkernel/kernel/RaspberryPi3.config
@@ -1523,7 +1523,7 @@ CONFIG_RTL8192C_COMMON=m
 # Input device support
 #
 CONFIG_INPUT=y
-CONFIG_INPUT_LEDS=y
+# CONFIG_INPUT_LEDS is not set
 # CONFIG_INPUT_FF_MEMLESS is not set
 # CONFIG_INPUT_SPARSEKMAP is not set
 # CONFIG_INPUT_MATRIXKMAP is not set
