Cleaned up power and user LED initialization.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21630 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/initramfs/Makefile
+++ b/bootkernel/initramfs/Makefile
@@ -674,23 +674,28 @@ endif
 	sed -i 's/@@REVISION@@/$(REVISION)/g'			$@/etc/rc
 	sed -i 's/@@TOOLCHAINBUILDER@@/$(TOOLCHAIN_BUILDER)/g'	$@/etc/rc
 	sed -i 's/@@TOOLCHAINREVISION@@/$(TOOLCHAIN_REV)/g'	$@/etc/rc
+ifneq ($(findstring Beagle, $(BOARDNAME)),)
+	sed -i 's#@@USERLED@@#/sys/class/leds/beaglebone\:green\:usr0#g' $@/etc/rc
+endif
 ifneq ($(findstring RaspberryPi, $(BOARDNAME)),)
 ifeq ($(KERNEL_BRANCH), 5.15)
+	sed -i 's#@@USERLED@@#/sys/class/leds/led0#g'		$@/etc/rc
 	sed -i '/mount -a/a fi'					 $@/etc/rc
 	sed -i '/mount -a/a ZZecho 255  >/sys/class/leds/led1/brightness' $@/etc/rc
 	sed -i '/mount -a/a ZZecho none >/sys/class/leds/led1/trigger' $@/etc/rc
 	sed -i '/mount -a/a if [ -f /sys/class/leds/led1/brightness ]; then' $@/etc/rc
 	sed -i '/mount -a/G'					$@/etc/rc
-	sed -i '/mount -a/a # Turn on the power LED, if it is led1' $@/etc/rc
+	sed -i '/mount -a/a # Initialize the power LED (if necessary)' $@/etc/rc
 	sed -i '/mount -a/G'					$@/etc/rc
 	sed -i 's/ZZ/  /g'					$@/etc/rc
 endif
 ifeq ($(KERNEL_BRANCH), 6.1)
+	sed -i 's#@@USERLED@@#/sys/class/leds/ACT#g'		$@/etc/rc
 	sed -i '/mount -a/a fi'					 $@/etc/rc
 	sed -i '/mount -a/a ZZecho default-on >/sys/class/leds/PWR/trigger' $@/etc/rc
 	sed -i '/mount -a/a if [ -f /sys/class/leds/PWR/trigger ]; then' $@/etc/rc
 	sed -i '/mount -a/G'					$@/etc/rc
-	sed -i '/mount -a/a # Turn on the power LED, if it is ACT' $@/etc/rc
+	sed -i '/mount -a/a # Initialize the power LED (if necessary)' $@/etc/rc
 	sed -i '/mount -a/G'					$@/etc/rc
 	sed -i 's/ZZ/  /g'					$@/etc/rc
 endif
@@ -871,9 +876,6 @@ endif
 # Perform board dependent customizations
 
 ifneq ($(findstring Beagle, $(BOARDNAME)),)
-	ln -s /sys/class/leds/beaglebone\:green\:usr0/brightness $@/dev/userled
-	ln -s /sys/class/leds/beaglebone\:green\:usr0/trigger	$@/dev/userled_trigger
-
 	echo ""							>>$@/etc/mdev.conf
 	echo "# $(BOARDNAME) devices"				>>$@/etc/mdev.conf
 	echo "ttyS1           root:gpio 660"			>>$@/etc/mdev.conf
@@ -884,15 +886,6 @@ ifneq ($(findstring Beagle, $(BOARDNAME)),)
 endif
 
 ifneq ($(findstring RaspberryPi, $(BOARDNAME)),)
-ifeq ($(KERNEL_BRANCH), 5.15)
-	ln -s /sys/class/leds/led0/brightness			$@/dev/userled
-	ln -s /sys/class/leds/led0/trigger			$@/dev/userled_trigger
-endif
-ifeq ($(KERNEL_BRANCH), 6.1)
-	ln -s /sys/class/leds/ACT/brightness			$@/dev/userled
-	ln -s /sys/class/leds/ACT/trigger			$@/dev/userled_trigger
-endif
-
 	sed -i 's/-h -L 115200 ttyS0/115200 tty1/g'		$@/etc/inittab
 
 	echo ""							>>$@/etc/mdev.conf
