--- a/bootkernel/kernel/RaspberryPi1.config
+++ b/bootkernel/kernel/RaspberryPi1.config
@@ -1138,10 +1138,7 @@ CONFIG_ENCX24J600=y
 # CONFIG_NET_VENDOR_SAMSUNG is not set
 # CONFIG_NET_VENDOR_SEEQ is not set
 # CONFIG_NET_VENDOR_SOLARFLARE is not set
-CONFIG_NET_VENDOR_SMSC=y
-# CONFIG_SMC91X is not set
-# CONFIG_SMC911X is not set
-# CONFIG_SMSC911X is not set
+# CONFIG_NET_VENDOR_SMSC is not set
 # CONFIG_NET_VENDOR_SOCIONEXT is not set
 # CONFIG_NET_VENDOR_STMICRO is not set
 # CONFIG_NET_VENDOR_SYNOPSYS is not set
@@ -1239,7 +1236,7 @@ CONFIG_USB_NET_DRIVERS=y
 CONFIG_USB_PEGASUS=y
 # CONFIG_USB_RTL8150 is not set
 # CONFIG_USB_RTL8152 is not set
-CONFIG_USB_LAN78XX=y
+# CONFIG_USB_LAN78XX is not set
 CONFIG_USB_USBNET=y
 CONFIG_USB_NET_AX8817X=y
 # CONFIG_USB_NET_AX88179_178A is not set
