Added rm -rf initramfs/initramfs.* to rebuild target.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21638 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/Makefile
+++ b/bootkernel/Makefile
@@ -81,6 +81,7 @@ endif
 # Rebuild the kernel distribution tarball with new initramfs
 
 rebuild:
+	rm -rf initramfs/initramfs.*
 	rm -f $(KERNEL_WORK)/build.done
 	rm -f $(KERNEL_WORK)/config.done
 	rm -f $(KERNEL_WORK)/dtbs.done
