Disabled unnecessary CONFIG_USB_DWC3
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21642 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/RaspberryPi4.config
+++ b/bootkernel/kernel/RaspberryPi4.config
@@ -2641,14 +2641,7 @@ CONFIG_USB_STORAGE=y
 # CONFIG_USBIP_CORE is not set
 # CONFIG_USB_CDNS_SUPPORT is not set
 # CONFIG_USB_MUSB_HDRC is not set
-CONFIG_USB_DWC3=y
-CONFIG_USB_DWC3_HOST=y
-
-#
-# Platform Glue Driver Support
-#
-CONFIG_USB_DWC3_HAPS=y
-CONFIG_USB_DWC3_OF_SIMPLE=y
+# CONFIG_USB_DWC3 is not set
 CONFIG_USB_DWC2=y
 CONFIG_USB_DWC2_HOST=y
 
