Don't need mdev-helper-gpio script anymore.
We use the new /dev/gpiochip API instead of the old sysfs API.


git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21654 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/initramfs/mdev.conf
+++ b/bootkernel/initramfs/mdev.conf
@@ -8,7 +8,7 @@ urandom		root:root	444
 zero		root:root	666
 
 # Embedded system devices
-gpio.*		root:gpio	660 */usr/libexec/mdev-helper-gpio
+gpiochip.*	root:gpio	660
 hidraw.*	root:gpio	660 */usr/libexec/mdev-helper-hidraw
 i2c-.*		root:gpio	660
 pwm.*		root:gpio	750 */usr/libexec/mdev-helper-pwm
