GREATLY simplified mdev-helper-pwm
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21655 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/initramfs/mdev.conf
+++ b/bootkernel/initramfs/mdev.conf
@@ -11,7 +11,7 @@ zero		root:root	666
 gpiochip.*	root:gpio	660
 hidraw.*	root:gpio	660 */usr/libexec/mdev-helper-hidraw
 i2c-.*		root:gpio	660
-pwm.*		root:gpio	750 */usr/libexec/mdev-helper-pwm
+pwmchip.*	root:gpio	750 */usr/libexec/mdev-helper-pwm
 spidev.*	root:gpio	660
 ttyACM[0-9]*	root:gpio	660
 ttyUSB[0-9]*	root:gpio	660
