Dropped support for Raspberry Pi 1 and 2
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21662 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/metapackages/Makefile
+++ b/toolchain/metapackages/Makefile
@@ -32,10 +32,10 @@ else ifeq ($(TOOLCHAIN_BUILDER), arm-gnu)
 FLAVOR		:= abe
 endif
 
-BOARDNAMES	:= BeagleBone RaspberryPi1 RaspberryPi2 RaspberryPi3
+BOARDNAMES	:= BeagleBone RaspberryPi3
 BOARDNAMELC	:= $(shell echo $(BOARDNAME) | tr A-Z a-z)
 
-PKGVERSION1	:= 9.0
+PKGVERSION1	:= 9.1
 PKGVERSION2	:= 9.0
 PKGVERSION3	:= 9.0
 
