Fixed default targets.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21678 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/thinservers/base/Makefile
+++ b/thinservers/base/Makefile
@@ -25,7 +25,7 @@ MUNTSOS		?= $(shell pwd)/../..
 
 include $(MUNTSOS)/thinservers/common.mk
 
-default: common_mk_default
+default: $(ZIPFILE)
 
 clean: common_mk_clean
 
