Fixed garbled value for CONFIG_CMDLINE
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21695 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/RaspberryPi3.config
+++ b/bootkernel/kernel/RaspberryPi3.config
@@ -452,7 +452,7 @@ CONFIG_ARCH_NR_GPIO=0
 #
 # Boot options
 #
-CONFIG_CMDLINE="consoleconsole=tty1 OPTIONS=0x012C"
+CONFIG_CMDLINE="console=tty1 OPTIONS=0x012C"
 CONFIG_CMDLINE_FROM_BOOTLOADER=y
 # CONFIG_CMDLINE_FORCE is not set
 # CONFIG_EFI is not set
