--- a/bootkernel/kernel/RaspberryPi3Gadget.config
+++ b/bootkernel/kernel/RaspberryPi3Gadget.config
@@ -452,7 +452,7 @@ CONFIG_ARCH_NR_GPIO=0
 #
 # Boot options
 #
-CONFIG_CMDLINE="consoleconsole=tty1 OPTIONS=0x012C"
+CONFIG_CMDLINE="console=tty1 OPTIONS=0x012C"
 CONFIG_CMDLINE_FROM_BOOTLOADER=y
 # CONFIG_CMDLINE_FORCE is not set
 # CONFIG_EFI is not set
