Mutated hotplug.script into simpler mdev-helper-net
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21706 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/initramfs/mdev.conf
+++ b/bootkernel/initramfs/mdev.conf
@@ -15,3 +15,9 @@ pwmchip.*	root:gpio	750 */usr/libexec/mdev-helper-pwm
 spidev.*	root:gpio	660
 ttyACM[0-9]*	root:gpio	660
 ttyUSB[0-9]*	root:gpio	660
+
+# Kernel module requests
+$MODALIAS=.*    0:0		000 @modprobe "$MODALIAS"
+
+# Network interfaces
+$SUBSYSTEM=net	0:0		000 */usr/libexec/mdev-helper-net
