It's "Raspberry Pi 5", not "Raspberry Pi 5 Model B"
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21715 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/initramfs/Makefile
+++ b/bootkernel/initramfs/Makefile
@@ -803,7 +803,7 @@ ifneq ($(findstring RaspberryPi4, $(BOARDNAME)),)
 endif
 
 ifneq ($(findstring RaspberryPi5, $(BOARDNAME)),)
-	# Firmware for the Raspberry Pi 5 Model B build-in WLAN interface
+	# Firmware for the Raspberry Pi build-in WLAN interface
 	mkdir -p										$@/lib/firmware/brcm
 	install -cm 0644 $(FIRMWARE_SRC)/cypress/cyfmac43455-sdio.bin				$@/lib/firmware/brcm/brcmfmac43455-sdio.bin
 	install -cm 0644 $(FIRMWARE_SRC)/cypress/cyfmac43455-sdio.clm_blob			$@/lib/firmware/brcm/brcmfmac43455-sdio.clm_blob
