Renamed LPC1114 to lpc1114
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21722 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/extensions/lpc1114/Makefile
+++ b/extensions/lpc1114/Makefile
@@ -28,7 +28,7 @@ RASPBERRYPI_LPC1114_SRC	?= $(HOME)/rpi-mcu/expansion/LPC1114/src
 include $(MUNTSOS)/include/$(BOARDNAME).mk
 include $(LIBSIMPLEIO)/include/dpkg.mk
 
-PKGNAME		:= LPC1114
+PKGNAME		:= lpc1114
 PKGVERSION	:= $(shell date +%Y.%j)
 PKGARCH		:= $(DEBARCH)
 PKGDIR		:= $(PKGNAME)-muntsos-$(BOARDARCH)
